Update pricing plans and descriptions for Groovy Music Player

--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
 
             <div class="col-four pricing-intro">
                 <h1 class="intro-header" data-aos="fade-up">Our Pricing Options</h1>
-
-                <p data-aos="fade-up">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium. 
-                </p>
+            
+                <p data-aos="fade-up">We offer a **free plan** with no ads for an uninterrupted music experience. Enjoy listening to your favorite tracks without any interruptions!  
+                <br><br>For users looking for additional features, we offer a **premium plan** available for a **one-time purchase of $1.99**. Unlock a host of exciting features, including enhanced customization options, exclusive themes, and more! The premium plan is designed to enhance your overall experience with Groovy Music Player.</p>
             </div>
 
             <div class="col-eight pricing-table">
@@ -290,17 +290,18 @@
                         <div class="plan-block" data-aos="fade-up"> 
 
                             <div class="plan-top-part">
-                                <h3 class="plan-block-title">Lite Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>25</p>
-                                <p class="plan-block-per">Per Month</p>
+                                <h3 class="plan-block-title">Free Plan</h3>
+                                <p class="plan-block-price"><sup>$</sup>0</p>
+                                <p class="plan-block-per">No ads too</p>
                             </div>
 
                             <div class="plan-bottom-part">
                                 <ul class="plan-block-features">
-                                    <li><span>3GB</span> Storage</li>
-                                    <li><span>10GB</span> Bandwidth</li>	                  
-                                    <li><span>5</span> Databases</li>		                  
-                                    <li><span>30</span> Email Accounts</li>
+                                    <li><span>All</span> Playback Options</li>
+                                    <li><span>Blocking</span> Folders</li>	                  
+                                    <li><span>Lyrics</span> Support</li>		                  
+                                    <li><span>Playlist</span> Customization</li>
+                                    <li><span>Background</span> Playback</li>
                                 </ul>
 
                                 <a class="button button-primary large" href="">Get Started</a>
@@ -313,17 +314,18 @@
                         <div class="plan-block primary" data-aos="fade-up">
 
                             <div class="plan-top-part">
-                                <h3 class="plan-block-title">Pro Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>50</p>
-                                <p class="plan-block-per">Per Month</p>
+                                <h3 class="plan-block-title">Premium Plan</h3>
+                                <p class="plan-block-price"><sup>$</sup>1.99</p>
+                                <p class="plan-block-per">Forever</p>
                             </div>
 
                             <div class="plan-bottom-part">
                                 <ul class="plan-block-features">
-                                    <li><span>5GB</span> Storage</li>
-                                    <li><span>20GB</span> Bandwidth</li>	                  
-                                    <li><span>15</span> Databases</li>		                  
-                                    <li><span>70</span> Email Accounts</li>
+                                    <li><span>Tag</span> Editor</li>
+                                    <li><span>Extra Music Control</span> Option</li>	                  
+                                    <li><span>Extra Theme</span> Color</li>		                  
+                                    <li><span>Speed & Pitch</span> Control</li>
+                                    <li>And <span>More ...</span></li>
                                 </ul>
 
                                 <a class="button button-primary large" href="">Get Started</a>
