Update user testimonials and remove unused avatar images

--- a/index.html
+++ b/index.html
@@ -359,32 +359,71 @@
 
                     <div>
                         <p>
-                        Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                        to do what you believe is great work. And the only way to do great work is to love what you do.
-                        If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                            Absolutely a great music app, but more importantly: no creepy privacy nonsense. For me, it has all the functionality that I want. A good way to organise your library and to play songs as you see fit. I don't want this to be a novel of a review, so just go and see for yourself, if this fits your needs.
                         </p> 
 
                         <div class="testimonial-author">
-                                <img src="images/avatars/user-02.jpg" alt="Author image">
+                                <img src="images/avatars/user-01.jpg" alt="Author image">
                                 <div class="author-info">
-                                    Steve Jobs
-                                    <span class="position">CEO, Apple.</span>
+                                    Delta Novum
+                                    <span>Google Play</span>
                                 </div>
                         </div>                 
                     </div> 
 
                     <div>
                         <p>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                        nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.    
+                            A free, 0 add music player just making off o publicity and word of mouth,this is the best mp3 player I ever used, no adds and free, I used it on my old phone as a way to listen to music and it's perfect,even a audio equalizer built in the app, as long as you have some local music, it can play it without a problem 10/10 
                         </p>
 
                         <div class="testimonial-author">
-                                <img src="images/avatars/user-03.jpg" alt="Author image">
+                                <img src="images/avatars/user-01.jpg" alt="Author image">
                                 <div class="author-info">
-                                    John Doe
-                                    <span>CEO, ABC Corp.</span>
+                                    A A
+                                    <span>Google Play</span>
+                                </div>
+                        </div>                                         
+                    </div> 
+
+                    <div>
+                        <p>
+                            I love Music Player that offers colorful UI. Please don't stop developing this app, and add more features like Now Playing themes (Gradient, Material3, Adaptive), and the option to disable the album art display in lockscreen. Thank you! ☺️
+                        </p>
+
+                        <div class="testimonial-author">
+                                <img src="images/avatars/user-01.jpg" alt="Author image">
+                                <div class="author-info">
+                                    Owa SB
+                                    <span>Google Play</span>
+                                </div>
+                        </div>                                         
+                    </div> 
+
+
+                    <div>
+                        <p>
+                            One of the simplest and cleanest music players. I was looking for an easy-to-use music player for my mom's phone since she isn't very skilled with tech, and this is hands-down the best in this category, the easiest I have found, even easier than Frolomuse. I also appreciate it has no ads and the app doesn't collect any data. Awesome.
+                        </p>
+
+                        <div class="testimonial-author">
+                                <img src="images/avatars/user-01.jpg" alt="Author image">
+                                <div class="author-info">
+                                    Diego Almeida
+                                    <span>Google Play</span>
+                                </div>
+                        </div>                                         
+                    </div> 
+
+                    <div>
+                        <p>
+                            So it's lightweight and the interface is user friendly for any kind of user . Reliable and it's ad free guyz. Hat's off💚❤️
+                        </p>
+
+                        <div class="testimonial-author">
+                                <img src="images/avatars/user-01.jpg" alt="Author image">
+                                <div class="author-info">
+                                    Mr Nine Gaming
+                                    <span>Google Play</span>
                                 </div>
                         </div>                                         
                     </div> 
