Update pricing descriptions and enhance download section with links

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             <div class="col-four pricing-intro">
                 <h1 class="intro-header" data-aos="fade-up">Our Pricing Options</h1>
             
-                <p data-aos="fade-up">We offer a **free plan** with no ads for an uninterrupted music experience. Enjoy listening to your favorite tracks without any interruptions!  
-                <br><br>For users looking for additional features, we offer a **premium plan** available for a **one-time purchase of $1.99**. Unlock a host of exciting features, including enhanced customization options, exclusive themes, and more! The premium plan is designed to enhance your overall experience with Groovy Music Player.</p>
+                <p data-aos="fade-up">We offer a "free plan" with no ads for an uninterrupted music experience. Enjoy listening to your favorite tracks without any interruptions!  
+                <br><br>For users looking for additional features, we offer a "premium plan" available for a one-time purchase of $1.99. Unlock a host of exciting features, including enhanced customization options, exclusive themes, and more! The premium plan is designed to enhance your overall experience with Groovy Music Player.</p>
             </div>
 
             <div class="col-eight pricing-table">
@@ -304,7 +304,7 @@
                                     <li><span>Background</span> Playback</li>
                                 </ul>
 
-                                <a class="button button-primary large" href="">Get Started</a>
+                                <a class="button button-primary large" href="https://play.google.com/store/apps/details?id=com.bitmavrick.groovy">Get Started</a>
                             </div>  
                      
                         </div>
@@ -328,7 +328,7 @@
                                     <li>And <span>More ...</span></li>
                                 </ul>
 
-                                <a class="button button-primary large" href="">Get Started</a>
+                                <a class="button button-primary large" href="https://play.google.com/store/apps/details?id=com.bitmavrick.groovy">Get Started</a>
                             </div>
 
                         </div>
@@ -446,12 +446,13 @@
                 <h1 class="intro-header"  data-aos="fade-up">Download Our App Today!</h1>
 
                 <p class="lead" data-aos="fade-up">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                    Experience a seamless and ad-free music journey with Groovy Music Player. Enjoy a beautifully designed interface, create custom playlists, sync lyrics in real-time, and personalize your listening experience with Material You design.  
+                <br><br>Get started for free with no ads, or unlock additional premium features with a one-time purchase of $1.99.  
+                Download now and take your music anywhere!
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
-                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.bitmavrick.groovy" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
                 </ul>
 
             </div>
