--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NV3KX2T8CN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-NV3KX2T8CN');
+    </script>
+
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8">
